# efficiency

./: .gitignore  .gitmodules  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: publish.yml  python-app.yml
api/interpretability/: index.html
api/interpretability/activation_cache/: index.html
api/interpretability/hooked_model/: index.html
api/interpretability/hooks/: index.html
api/interpretability/models/: index.html
api/interpretability/module_wrapper/: index.html
api/interpretability/token_index/: index.html
docs/: index.md
docs/api/interpretability/: activation_cache.md  hooked_model.md  hooks.md  index.md  models.md  module_wrapper.md  token_index.md
easyroutine/: utils.py
easyroutine/interpretability/: __init__.py  ablation.py  activation_cache.py  hooked_model copy.py  hooked_model.py  hooks.py  models.py  token_index.py  utils.py
easyroutine/interpretability/config/: config.yaml
easyroutine/interpretability/module_wrappers/: base.py  chameleon_attention.py  llava_attention.py  manager.py
easyroutine/interpretability/tools/: logit_lens.py
scripts/: increment_version.py
search/: search_index.json
test/: test_activation_cache.py  test_hooked_model.py  test_specific_hooked_model.py  test_tools.py
test/interpretability/: test_hooked_model.py
tutorial/: 2_logit_lens.ipynb
